--- a/styles.css
+++ b/styles.css
@@ -13,6 +13,7 @@ body {
   border: solid white 5px;
   border-radius: 25px;
   padding: 10px 50px 10px 50px;
+  background-color: rgba(97, 97, 97, 0.3);
 }
 
 h1 {
